--- a/intro_r-1.Rmd
+++ b/intro_r-1.Rmd
@@ -24,11 +24,9 @@ class: center, middle
 
 ## INE Educa: Clases abiertas de R
 
-## Introducción a R
-
 ## ¿Qué es R y para qué sirve?
 
-## Introducción y herramientas de exploración de datos
+## Proyecto Ciencia de Datos
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = TRUE)
@@ -77,11 +75,11 @@ background-position: 100% 0%
 
 --
 
-**¡Es muy versátil!** Hoy es utilizado para abordar problemas de **distintas disciplinas**, como estadísticas y ciencia de datos.
+**¡Es muy versátil!** Hoy es utilizado para abordar problemas de **distintas disciplinas**.
 
 --
 
-Posiblemente las **técnicas o metodologías más recientes tengan alguna aplicación en R**. Los investigadores muchas veces publican un paquete del programa en compañía de sus artículos.
+Posiblemente las **técnicas o metodologías más recientes tengan alguna aplicación en R**. Los investigadores muchas veces publican código en compañía de sus artículos.
 
 --
 
@@ -161,7 +159,7 @@ background-position: 100% 0%
 
 --
 
-.medium-par[**Documentos metodológicos Encuesta de Presupuestos Famiiliares (EPF):**]
+.medium-par[**Documentos metodológicos Encuesta de Presupuestos Familiares (EPF):**]
 
 --
 
@@ -215,9 +213,7 @@ class: center, middle
 
 ## INE Educa: Clases abiertas de R
 
-## Introducción a R
-
 ## ¿Qué es R y para qué sirve?
 
-## Introducción y herramientas de exploración de datos
+## Proyecto Ciencia de Datos
 
